[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["full"] }
h3-quinn = "0.0.5"
h3 = "0.0.4"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
bytes = "1.5.0"
rustls-native-certs = "0.6"
http = "1.0.0"
rustls-pemfile = "2.0.0"
anyhow = "1.0"
h3-webtransport = "0.1.0"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
tracing = "0.1.37"

tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "0.2.0"

tracing-tree = { version = "0.2" }